...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Tab Bar Controller-->
        <scene sceneID="mi4-LU-RkB">
            <objects>
                <tabBarController storyboardIdentifier="TabBarViewController" id="C8m-Io-Lh2" customClass="TabBarController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Dzl-1c-bWF">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="selectedImageTintColor" name="YP White (iOS)"/>
                        <tabBarAppearance key="standardAppearance">
...
                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="LCK-ul-iek"/>
                                    <constraint firstAttribute="width" constant="60" id="NXN-MU-Bcn"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4q-25-enC" userLabel="Authenticate">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="gPd-tY-VXr"/>
                                </constraints>
...
            <point key="canvasLocation" x="1880" y="-720"/>
        </scene>
        <!--Web View View Controller-->
        <scene sceneID="tHc-Ra-JBc">
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="LWV-WY-aBx" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="BfN-OC-Who" userLabel="UnsplashWebView">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DW0-mp-tj9">
                                <rect key="frame" x="0.0" y="91" width="414" height="805"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
...
